--- a/src/VSWorkspace/JoystickProgram/JoystickProgram/MainWindow.xaml
+++ b/src/VSWorkspace/JoystickProgram/JoystickProgram/MainWindow.xaml
@@ -5,48 +5,48 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:JoystickProgram"
         mc:Ignorable="d"
-        Title="Submarine Control Program" Height="595" Width="1200">
+        Title="Submarine Control Program" Height="595" Width="505">
     <Grid Margin="0,0,2,0">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="9*"/>
             <ColumnDefinition Width="149*"/>
         </Grid.ColumnDefinitions>
         <Label Content="SUBMARINE CONTROL PROGRAM" HorizontalAlignment="Left" Height="36" VerticalAlignment="Top" Width="297" FontSize="18" Grid.ColumnSpan="2"/>
-        <Button x:Name="StartSerial" Content="Serial" Grid.Column="1" HorizontalAlignment="Left" Height="26" Margin="496,18,0,0" VerticalAlignment="Top" Width="85" Click="SerialButton_Click"/>
-        <Label x:Name="SetpointDataLabel" Content="Setpoint Data From Joystick" Grid.Column="1" HorizontalAlignment="Left" Height="35" Margin="703,57,0,0" VerticalAlignment="Top" Width="239"/>
-        <Label x:Name="FeedbackDataLabel" Content="Feedback Data from Submarine" Grid.Column="1" HorizontalAlignment="Left" Height="24" Margin="110,57,0,0" VerticalAlignment="Top" Width="224"/>
-        <Border BorderBrush="Black" BorderThickness="1" Grid.Column="1" HorizontalAlignment="Left" Height="396" Margin="496,168,0,0" VerticalAlignment="Top" Width="2"/>
-        <Slider x:Name="ThrottleSetpointSlider" Grid.Column="1" HorizontalAlignment="Left" Height="29" Margin="715,136,0,0" VerticalAlignment="Top" Width="198" Panel.ZIndex="2" Minimum="-100" Maximum="100" IsEnabled="False"/>
-        <Slider x:Name="BallastSetpointSlider" Grid.Column="1" HorizontalAlignment="Left" Height="20" Margin="715,365,0,0" VerticalAlignment="Top" Width="198" Maximum="365" IsEnabled="False"/>
-        <Slider x:Name="DiveAngleSlider" Grid.Column="1" HorizontalAlignment="Left" Height="20" Margin="715,211,0,0" VerticalAlignment="Top" Width="198" Maximum="100" Minimum="-100" IsEnabled="False"/>
-        <Slider x:Name="SpoolSetpointSlider" Grid.Column="1" HorizontalAlignment="Left" Height="20" Margin="715,432,0,0" VerticalAlignment="Top" Width="198" Maximum="700" IsEnabled="False"/>
-        <Slider x:Name="RudderAngleSlider" Grid.Column="1" HorizontalAlignment="Left" Height="20" Margin="715,290,0,0" VerticalAlignment="Top" Width="198" Maximum="100" Minimum="-100" IsEnabled="False"/>
-        <Label x:Name="ThrottleLabel" Content="Throttle" Grid.Column="1" HorizontalAlignment="Left" Height="31" Margin="783,105,0,0" VerticalAlignment="Top" Width="54" RenderTransformOrigin="0.51,-0.538"/>
-        <Label x:Name="DiveAngleLabel" Content="Dive Angle" Grid.Column="1" HorizontalAlignment="Left" Height="31" Margin="770,180,0,0" VerticalAlignment="Top" Width="80"/>
-        <Label x:Name="RudderSetpointLabel" Content="Rudder" Grid.Column="1" HorizontalAlignment="Left" Height="25" Margin="783,260,0,0" VerticalAlignment="Top" Width="54"/>
-        <Label x:Name="BallastSetpointLabel" Content="Ballast" Grid.Column="1" HorizontalAlignment="Left" Height="26" Margin="783,334,0,0" VerticalAlignment="Top" Width="67"/>
-        <Label x:Name="SpoolSetpointLabel" Content="Spool" Grid.Column="1" HorizontalAlignment="Left" Height="28" Margin="783,399,0,0" VerticalAlignment="Top" Width="54"/>
-        <CheckBox x:Name="HeadlightsCheckbox" Content="Headlights" HorizontalAlignment="Left" VerticalAlignment="Top" Grid.Column="1" Margin="973,168,0,0" Width="97" Height="28" IsEnabled="False"/>
-        <Label x:Name="ForeDivePlanesLabel" Content="Fore Dive Planes" Grid.Column="1" HorizontalAlignment="Left" Margin="55,105,0,0" VerticalAlignment="Top"/>
-        <Label x:Name="AftDivePlanesLabel" Content="Aft Dive Planes" Grid.Column="1" HorizontalAlignment="Left" Height="31" Margin="275,105,0,0" VerticalAlignment="Top" Width="141"/>
-        <Label x:Name="RudderFeedbackLabel" Content="Rudder" Grid.Column="1" HorizontalAlignment="Left" Height="34" Margin="76,202,0,0" VerticalAlignment="Top" Width="63"/>
-        <Label x:Name="BallastFeedbackLabel" Content="Ballast" Grid.Column="1" HorizontalAlignment="Left" Height="39" Margin="290,281,0,0" VerticalAlignment="Top" Width="84"/>
-        <Label x:Name="SpoolFeedbackLabel" Content="Spool" Grid.Column="1" HorizontalAlignment="Left" Height="25" Margin="76,360,0,0" VerticalAlignment="Top" Width="57"/>
-        <Label x:Name="BatteryVoltageLabel" Content="Battery Voltage" Grid.Column="1" HorizontalAlignment="Left" Height="32" Margin="275,204,0,0" VerticalAlignment="Top" Width="99"/>
-        <Label x:Name="WaterSensorLabel" Content="Water Sensor" Grid.Column="1" HorizontalAlignment="Left" Height="40" Margin="55,280,0,0" VerticalAlignment="Top" Width="88"/>
-        <Label x:Name="MotorTempLabel" Content="Motor Temp" Grid.Column="1" HorizontalAlignment="Left" Height="30" Margin="275,360,0,0" VerticalAlignment="Top" Width="77"/>
-        <Slider x:Name="AftDiveSlider" Grid.Column="1" HorizontalAlignment="Left" Height="20" Margin="249,136,0,0" VerticalAlignment="Top" Width="145" Maximum="100" Minimum="-100" IsEnabled="False"/>
-        <Slider x:Name="BatteryVoltageSlider" Grid.Column="1" HorizontalAlignment="Left" Height="20" Margin="249,241,0,0" VerticalAlignment="Top" Width="145" IsEnabled="False" Maximum="125"/>
-        <Slider x:Name="BallastFeedbackSlider" Grid.Column="1" HorizontalAlignment="Left" Height="20" Margin="249,310,0,0" VerticalAlignment="Top" Width="145" Maximum="365" IsEnabled="False"/>
-        <Slider x:Name="MotorTempSlider" Grid.Column="1" HorizontalAlignment="Left" Height="20" Margin="249,390,0,0" VerticalAlignment="Top" Width="145" IsEnabled="False" Maximum="100"/>
-        <Slider x:Name="ForeDiveSlider" Grid.Column="1" HorizontalAlignment="Left" Height="20" Margin="41,136,0,0" VerticalAlignment="Top" Width="145" Maximum="100" Minimum="-100" IsEnabled="False"/>
-        <Slider x:Name="RudderFeedbackSlider" Grid.Column="1" HorizontalAlignment="Left" Height="20" Margin="41,236,0,0" VerticalAlignment="Top" Width="145" Maximum="100" Minimum="-100" IsEnabled="False"/>
-        <Slider x:Name="WaterSensorSlider" Grid.Column="1" HorizontalAlignment="Left" Height="20" Margin="41,310,0,0" VerticalAlignment="Top" Width="145" IsEnabled="False" Maximum="100"/>
-        <Slider x:Name="SpoolFeedbackSlider" Grid.Column="1" HorizontalAlignment="Left" Height="20" Margin="41,390,0,0" VerticalAlignment="Top" Width="145" Maximum="700" IsEnabled="False"/>
-        <Label x:Name="NoJoystickFoundText" Content="NO JOYSTICK FOUND" Grid.Column="1" HorizontalAlignment="Left" Margin="810,10,0,520" Width="156" FontSize="14" IsEnabled="False" FontWeight="Bold"/>
-        <ComboBox x:Name="SerialComboBox" Grid.Column="1" HorizontalAlignment="Left" Height="24" Margin="384,20,0,0" VerticalAlignment="Top" Width="91" Grid.Row="1"/>
+        <Button x:Name="StartSerial" Content="Serial" Grid.Column="1" HorizontalAlignment="Left" Height="26" Margin="362,12,0,0" VerticalAlignment="Top" Width="85" Click="SerialButton_Click"/>
+        <Label x:Name="SetpointDataLabel" Content="Setpoint Data From Joystick" Grid.Column="1" HorizontalAlignment="Left" Height="35" Margin="224,57,0,0" VerticalAlignment="Top" Width="239"/>
+        <Label x:Name="FeedbackDataLabel" Content="Feedback Data from Submarine" Grid.Column="1" HorizontalAlignment="Left" Height="24" Margin="0,36,0,0" VerticalAlignment="Top" Width="224"/>
+        <Border BorderBrush="Black" BorderThickness="1" Grid.Column="1" HorizontalAlignment="Left" Height="523" Margin="208,41,0,0" VerticalAlignment="Top" Width="2"/>
+        <Slider x:Name="ThrottleSetpointSlider" Grid.Column="1" HorizontalAlignment="Left" Height="29" Margin="224,107,0,0" VerticalAlignment="Top" Width="198" Panel.ZIndex="2" Minimum="-100" Maximum="100" IsEnabled="False"/>
+        <Slider x:Name="BallastSetpointSlider" Grid.Column="1" HorizontalAlignment="Left" Height="20" Margin="224,320,0,0" VerticalAlignment="Top" Width="198" Maximum="365" IsEnabled="False"/>
+        <Slider x:Name="DiveAngleSlider" Grid.Column="1" HorizontalAlignment="Left" Height="20" Margin="224,172,0,0" VerticalAlignment="Top" Width="198" Maximum="100" Minimum="-100" IsEnabled="False"/>
+        <Slider x:Name="SpoolSetpointSlider" Grid.Column="1" HorizontalAlignment="Left" Height="20" Margin="224,396,0,0" VerticalAlignment="Top" Width="198" Maximum="700" IsEnabled="False"/>
+        <Slider x:Name="RudderAngleSlider" Grid.Column="1" HorizontalAlignment="Left" Height="20" Margin="224,247,0,0" VerticalAlignment="Top" Width="198" Maximum="100" Minimum="-100" IsEnabled="False"/>
+        <Label x:Name="ThrottleLabel" Content="Throttle" Grid.Column="1" HorizontalAlignment="Left" Height="31" Margin="224,81,0,0" VerticalAlignment="Top" Width="54" RenderTransformOrigin="0.51,-0.538"/>
+        <Label x:Name="DiveAngleLabel" Content="Dive Angle" Grid.Column="1" HorizontalAlignment="Left" Height="31" Margin="224,141,0,0" VerticalAlignment="Top" Width="80"/>
+        <Label x:Name="RudderSetpointLabel" Content="Rudder" Grid.Column="1" HorizontalAlignment="Left" Height="25" Margin="224,218,0,0" VerticalAlignment="Top" Width="54"/>
+        <Label x:Name="BallastSetpointLabel" Content="Ballast" Grid.Column="1" HorizontalAlignment="Left" Height="26" Margin="224,289,0,0" VerticalAlignment="Top" Width="67"/>
+        <Label x:Name="SpoolSetpointLabel" Content="Spool" Grid.Column="1" HorizontalAlignment="Left" Height="28" Margin="224,363,0,0" VerticalAlignment="Top" Width="54"/>
+        <CheckBox x:Name="HeadlightsCheckbox" Content="Headlights" HorizontalAlignment="Left" VerticalAlignment="Top" Grid.Column="1" Margin="224,436,0,0" Width="97" Height="28" IsEnabled="False"/>
+        <Label x:Name="ForeDivePlanesLabel" Content="Fore Dive Planes" Grid.Column="1" HorizontalAlignment="Left" Margin="10,66,0,0" VerticalAlignment="Top"/>
+        <Label x:Name="AftDivePlanesLabel" Content="Aft Dive Planes" Grid.Column="1" HorizontalAlignment="Left" Height="31" Margin="10,316,0,0" VerticalAlignment="Top" Width="141"/>
+        <Label x:Name="RudderFeedbackLabel" Content="Rudder" Grid.Column="1" HorizontalAlignment="Left" Height="34" Margin="10,131,0,0" VerticalAlignment="Top" Width="63"/>
+        <Label x:Name="BallastFeedbackLabel" Content="Ballast" Grid.Column="1" HorizontalAlignment="Left" Height="24" Margin="11,448,0,0" VerticalAlignment="Top" Width="62"/>
+        <Label x:Name="SpoolFeedbackLabel" Content="Spool" Grid.Column="1" HorizontalAlignment="Left" Height="25" Margin="10,242,0,0" VerticalAlignment="Top" Width="57" RenderTransformOrigin="0.561,-0.16"/>
+        <Label x:Name="BatteryVoltageLabel" Content="Battery Voltage" Grid.Column="1" HorizontalAlignment="Left" Height="32" Margin="10,381,0,0" VerticalAlignment="Top" Width="99" RenderTransformOrigin="0.505,-0.25"/>
+        <Label x:Name="WaterSensorLabel" Content="Water Sensor" Grid.Column="1" HorizontalAlignment="Left" Height="40" Margin="10,191,0,0" VerticalAlignment="Top" Width="88"/>
+        <Label x:Name="MotorTempLabel" Content="Motor Temp" Grid.Column="1" HorizontalAlignment="Left" Height="30" Margin="10,504,0,0" VerticalAlignment="Top" Width="77"/>
+        <Slider x:Name="AftDiveSlider" Grid.Column="1" HorizontalAlignment="Left" Height="20" Margin="10,347,0,0" VerticalAlignment="Top" Width="145" Maximum="100" Minimum="-100" IsEnabled="False"/>
+        <Slider x:Name="BatteryVoltageSlider" Grid.Column="1" HorizontalAlignment="Left" Height="20" Margin="10,413,0,0" VerticalAlignment="Top" Width="145" IsEnabled="False" Maximum="125" RenderTransformOrigin="-0.897,8.75"/>
+        <Slider x:Name="BallastFeedbackSlider" Grid.Column="1" HorizontalAlignment="Left" Height="20" Margin="10,477,0,0" VerticalAlignment="Top" Width="145" Maximum="365" IsEnabled="False"/>
+        <Slider x:Name="MotorTempSlider" Grid.Column="1" HorizontalAlignment="Left" Height="20" Margin="11,534,0,0" VerticalAlignment="Top" Width="145" IsEnabled="False" Maximum="100"/>
+        <Slider x:Name="ForeDiveSlider" Grid.Column="1" HorizontalAlignment="Left" Height="20" Margin="10,92,0,0" VerticalAlignment="Top" Width="145" Maximum="100" Minimum="-100" IsEnabled="False"/>
+        <Slider x:Name="RudderFeedbackSlider" Grid.Column="1" HorizontalAlignment="Left" Height="20" Margin="10,156,0,0" VerticalAlignment="Top" Width="145" Maximum="100" Minimum="-100" IsEnabled="False"/>
+        <Slider x:Name="WaterSensorSlider" Grid.Column="1" HorizontalAlignment="Left" Height="20" Margin="10,216,0,0" VerticalAlignment="Top" Width="145" IsEnabled="False" Maximum="100"/>
+        <Slider x:Name="SpoolFeedbackSlider" Grid.Column="1" HorizontalAlignment="Left" Height="20" Margin="10,272,0,0" VerticalAlignment="Top" Width="145" Maximum="700" IsEnabled="False"/>
+        <Label x:Name="NoJoystickFoundText" Content="NO JOYSTICK FOUND" Grid.Column="1" HorizontalAlignment="Left" Margin="224,534,0,-4" Width="156" FontSize="14" IsEnabled="False" FontWeight="Bold"/>
+        <ComboBox x:Name="SerialComboBox" Grid.Column="1" HorizontalAlignment="Left" Height="24" Margin="257,12,0,0" VerticalAlignment="Top" Width="91"/>
         <Label x:Name="EStopLabel" Content="ESTOP" Grid.Column="1" HorizontalAlignment="Left" Height="55" Margin="480,81,0,0" VerticalAlignment="Top" Width="101" FontSize="30" FontWeight="Bold" Background="#FFF10404" Visibility="Hidden"/>
-        <TextBox x:Name="SerialBox" Grid.Column="1" HorizontalAlignment="Left" Height="31" Margin="532,180,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="154"/>
+        <TextBox x:Name="SerialBox" Grid.Column="1" HorizontalAlignment="Left" Height="65" Margin="224,469,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="156" RenderTransformOrigin="0.519,0.419"/>
 
     </Grid>
 </Window>
