--- a/src/VSWorkspace/JoystickProgram/JoystickProgram/MainWindow.xaml
+++ b/src/VSWorkspace/JoystickProgram/JoystickProgram/MainWindow.xaml
@@ -5,14 +5,15 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:JoystickProgram"
         mc:Ignorable="d"
-        Title="Submarine Control Program" Height="595" Width="505">
+        Title="Submarine Control Program" Height="683.667" Width="496.667">
     <Grid Margin="0,0,2,0">
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="9*"/>
-            <ColumnDefinition Width="149*"/>
+            <ColumnDefinition Width="20*"/>
+            <ColumnDefinition Width="989*"/>
+            <ColumnDefinition Width="20*"/>
         </Grid.ColumnDefinitions>
         <Label Content="SUBMARINE CONTROL PROGRAM" HorizontalAlignment="Left" Height="36" VerticalAlignment="Top" Width="297" FontSize="18" Grid.ColumnSpan="2"/>
-        <Button x:Name="StartSerial" Content="Serial" Grid.Column="1" HorizontalAlignment="Left" Height="26" Margin="362,12,0,0" VerticalAlignment="Top" Width="85" Click="SerialButton_Click"/>
+        <Button x:Name="StartSerial" Content="Serial" Grid.Column="1" HorizontalAlignment="Left" Height="26" Margin="378,12,0,0" VerticalAlignment="Top" Width="85" Click="SerialButton_Click" RenderTransformOrigin="0.847,0.538"/>
         <Label x:Name="SetpointDataLabel" Content="Setpoint Data From Joystick" Grid.Column="1" HorizontalAlignment="Left" Height="35" Margin="224,57,0,0" VerticalAlignment="Top" Width="239"/>
         <Label x:Name="FeedbackDataLabel" Content="Feedback Data from Submarine" Grid.Column="1" HorizontalAlignment="Left" Height="24" Margin="0,36,0,0" VerticalAlignment="Top" Width="224"/>
         <Border BorderBrush="Black" BorderThickness="1" Grid.Column="1" HorizontalAlignment="Left" Height="523" Margin="208,41,0,0" VerticalAlignment="Top" Width="2"/>
@@ -44,9 +45,10 @@
         <Slider x:Name="WaterSensorSlider" Grid.Column="1" HorizontalAlignment="Left" Height="20" Margin="10,216,0,0" VerticalAlignment="Top" Width="145" IsEnabled="False" Maximum="100"/>
         <Slider x:Name="SpoolFeedbackSlider" Grid.Column="1" HorizontalAlignment="Left" Height="20" Margin="10,272,0,0" VerticalAlignment="Top" Width="145" Maximum="700" IsEnabled="False"/>
         <Label x:Name="NoJoystickFoundText" Content="NO JOYSTICK FOUND" Grid.Column="1" HorizontalAlignment="Left" Margin="224,534,0,-4" Width="156" FontSize="14" IsEnabled="False" FontWeight="Bold"/>
-        <ComboBox x:Name="SerialComboBox" Grid.Column="1" HorizontalAlignment="Left" Height="24" Margin="257,12,0,0" VerticalAlignment="Top" Width="91"/>
-        <Label x:Name="EStopLabel" Content="ESTOP" Grid.Column="1" HorizontalAlignment="Left" Height="55" Margin="480,81,0,0" VerticalAlignment="Top" Width="101" FontSize="30" FontWeight="Bold" Background="#FFF10404" Visibility="Hidden"/>
+        <ComboBox x:Name="SerialComboBox" Grid.Column="1" HorizontalAlignment="Left" Height="24" Margin="280,12,0,0" VerticalAlignment="Top" Width="91" RenderTransformOrigin="0.956,0.333"/>
+        <Label x:Name="EStopLabel" Content="ESTOP" Grid.Column="1" HorizontalAlignment="Left" Height="55" Margin="50,574,0,0" VerticalAlignment="Top" Width="101" FontSize="30" FontWeight="Bold" Background="#FFF10404" Visibility="Hidden" />
         <TextBox x:Name="SerialBox" Grid.Column="1" HorizontalAlignment="Left" Height="65" Margin="224,469,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="156" RenderTransformOrigin="0.519,0.419"/>
+        <TextBox x:Name="FloodingBox" Grid.Column="1" HorizontalAlignment="Left" Height="54" Margin="208,575,0,0" TextWrapping="Wrap" Text="FLOODING" VerticalAlignment="Top" Width="198" FontSize="36" Background="#FFC11010" Visibility="Hidden" />
 
     </Grid>
 </Window>
